<resources>
    <string name="app_name">Future Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name">Task Name</string>
    <string name="due_date_mm_dd_yyyy">Due Date (MM/dd/yyyy):</string>
    <string name="tags">Tags:</string>
    <string name="date_postponed_mm_dd_yyyy">Date Postponed (MM/dd/yyyy):</string>
    <string name="description">Description:</string>
    <string name="description_goes_here">Description goes here...</string>
    <string name="why_task_was_pushed_off">Why task was pushed off:</string>
    <string name="why_task_was_pushed_off_hint">Why task was pushed off</string>
    <string name="penalties_for_pushing_off_task_if_any">Penalties for pushing off task (if any):</string>
    <string name="penalties_for_pushing_off_task_if_any_hint">Penalties for pushing off task goes here (if any)</string>
    <string name="total_number_of_delayed_days">Total Number of delayed days:</string>
    <string name="overdue">Overdue</string>
    <string name="date_completed_mm_dd_yyyy">Date Completed (MM/dd/yyyy):</string>
    <string name="enter_a_new_tag">Enter a new tag</string>
    <string name="add">Add</string>
    <string name="current_tags">Current Tags:</string>
    <string name="futureme_analytics">FutureMe Analytics</string>
    <string name="productivity_summary">Productivity Summary</string>
    <string name="weekly_delay_trends">Weekly Delay Trends</string>
    <string name="task_behavior_breakdown">Task Behavior Breakdown</string>
    <string name="overdue_tasks_by_tag">Overdue Tasks by Tag</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="add_tags">Add tags</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="new_due_date">New Due Date:</string>
    <string name="date_postponed">Date Postponed:</string>
    <string name="date_completed_by">Date Completed by:</string>
    <string name="edit">Edit</string>
    <string name="search_tasks">Search tasks...</string>
    <string name="to_do_list">To do list</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="tasks">Tasks</string>
    <string name="task_details">Task Details</string>
    <string name="add_edit_task">Add/Edit Task</string>
    <string name="no_tag">No Tag</string>
</resources>